Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-97491

Android: in TextField: cannot edit inside of words, only at the end

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.15.8, 6.2.2, 6.3.0 Alpha
    • 6.3.0 Feature Freeze
    • QPA
    • None
    • Android
    • a47f66cee280cef1e5854f3ed187e9f2be19697a (qt/qtbase/dev) 0a0339acd69d4ce7e25f30bd8cef9b2d19524641 (qt/qtbase/6.2) 8a8b69e3eec14a85030b4d76a5697754651d236b (qt/tqtc-qtbase/5.15)

      Write a word into a TextField,
      place the cursor inside the word,
      hit backspace on the keyboard,
      the last letter of the word is removed, not the one before the cursor.

      Happens on Google Pixel 4a and emulated Google Pixel 5.

        For Gerrit Dashboard: QTBUG-97491
        # Subject Branch Project Status CR V

            andreasbuhr Andreas Buhr
            andreasbuhr Andreas Buhr
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes